--- a/roles/kube-master/templates/kube-scheduler.yaml.j2
+++ b/roles/kube-master/templates/kube-scheduler.yaml.j2
@@ -12,6 +12,7 @@ spec:
     - /hyperkube
     - scheduler
     - --master=http://127.0.0.1:8080
+    - --leader-elect
     - --v={{ kubernetes_log_level }}
     livenessProbe:
       httpGet:
